--- a/analysis/lme_microbiome.Rmd
+++ b/analysis/lme_microbiome.Rmd
@@ -69,7 +69,7 @@ h\left(Y_{ij}\right)&=\beta_{0j} + r_{ij}\\
 
 ```{r}
 
-phylum.fit0 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit0 <- glmm_microbiome(mydata=microbiome_data,model.number=0,
                                taxa.level="Phylum", link="poisson",
                                model="1 + (1|SubjectID)")
 
@@ -87,7 +87,7 @@ h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij}+ r_{ij}\\
 ```{r}
 
 
-phylum.fit1 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit1 <- glmm_microbiome(mydata=microbiome_data,model.number=1,
                                taxa.level="Phylum", link="poisson",
                                model="1 + time + (1|SubjectID)")
 
@@ -110,7 +110,7 @@ Gender is coded as female (effect of being female compared to males).
 ```{r}
 
 
-phylum.fit2 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit2 <- glmm_microbiome(mydata=microbiome_data,model.number=2,
                                taxa.level="Phylum", link="poisson",
                                model="1 + time + female + (1|SubjectID)")
 ```
@@ -133,7 +133,7 @@ Groups were coded this way due to sample size.
 ```{r}
 
 
-phylum.fit3 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit3 <- glmm_microbiome(mydata=microbiome_data,model.number=3,
                                taxa.level="Phylum", link="poisson",
                                model="1 + time + hispanic + (1|SubjectID)")
 ```
@@ -162,7 +162,7 @@ The effect of intervention is the main outcome of this study.
 ```{r}
 
 
-phylum.fit4 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit4 <- glmm_microbiome(mydata=microbiome_data,model.number=4,
                                taxa.level="Phylum", link="poisson",
                                model="1 + intB + time + (1|SubjectID)")
 ```
@@ -194,7 +194,7 @@ If the effect of the intervention is still essentially zero, we will re-estimate
 ```{r}
 
 
-phylum.fit5 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit5 <- glmm_microbiome(mydata=microbiome_data,model.number=5,
                                taxa.level="Phylum", link="poisson",
                                model="1 + intB + time + intB:time + (1|SubjectID)")
 ```
@@ -214,7 +214,7 @@ h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Week)_{ij} + \beta_{2j}(Internveti
 ```{r}
 
 
-phylum.fit6 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit6 <- glmm_microbiome(mydata=microbiome_data,model.number=6,
                                taxa.level="Phylum", link="poisson",
                                model="1 + time + intB:time + (1|SubjectID)")
 ```
@@ -234,7 +234,7 @@ h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Internvetion)_{ij} + \beta_{2j}(We
 ```{r}
 
 
-phylum.fit7 <- glmm_microbiome(mydata=microbiome_data,
+phylum.fit7 <- glmm_microbiome(mydata=microbiome_data, model.number=7,
                                taxa.level="Phylum", link="poisson",
                                model="1 + intB + time + female + (1|SubjectID)")
 ```
