--- a/analysis/lme_microbiome.Rmd
+++ b/analysis/lme_microbiome.Rmd
@@ -99,10 +99,9 @@ This is contrary to the results when we used the normal theory model.
 ## Covariates: Time + Gender
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij} + \beta_{2j}(Gender)_{ij}+ r_{ij}\\
-\beta_{0j}&= \gamma_{00} + u_{0j}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij} + r_{ij}\\
+\beta_{0j}&= \gamma_{00} + \gamma_{01}(Gender)_{j} + u_{0j}\\
 \beta_{1j}&= \gamma_{10}\\
-\beta_{2j}&= \gamma_{20}\\
 \end{align*}
 
 Gender is coded as female (effect of being female compared to males).
@@ -121,10 +120,9 @@ We will take out gender out of model to test other effects, but will come back w
 ## Covariates: Time + Ethnicity
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij} + \beta_{2j}(Ethnicity)_{ij}+ r_{ij}\\
-\beta_{0j}&= \gamma_{00} + u_{0j}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij}+ r_{ij}\\
+\beta_{0j}&= \gamma_{00} + \gamma_{01}(Ethnicity)_{j} + u_{0j}\\
 \beta_{1j}&= \gamma_{10}\\
-\beta_{2j}&= \gamma_{20}\\
 \end{align*}
 
 Ethnicity is coded as Hispanic (effect of being Hispanic compared to White, Asian or Native American).
@@ -151,10 +149,9 @@ So, the results are interpretted as the effect of being in intervention group B.
 ### Covariate(s): Time
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Internvetion)_{ij} + \beta_{2j}*(Week)_{ij} + r_{ij}\\
-\beta_{0j}&= \gamma_{00} + u_{0j}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}*(Week)_{ij} + r_{ij}\\
+\beta_{0j}&= \gamma_{00} + \gamma_{01}(Intervention)_{j} + u_{0j}\\
 \beta_{1j}&= \gamma_{10}\\
-\beta_{2j}&= \gamma_{20}\\
 \end{align*}
 
 The effect of intervention is the main outcome of this study.
@@ -181,11 +178,9 @@ Here, the model tests whether the effect of the intervention is constant across 
 And remember, time is coded 0, 1, 2, 3, so a 1 unit increase in time corresponds to 1 month or 4 weeks of the intervention.
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Internvetion)_{ij} + \beta_{2j}(Week)_{ij} + \beta_{3j}(Internvetion\times Week)_{ij}  + r_{ij}\\
-\beta_{0j}&= \gamma_{00} + u_{0j}\\
-\beta_{1j}&= \gamma_{10}\\
-\beta_{2j}&= \gamma_{20}\\
-\beta_{3j}&= \gamma_{30}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Week)_{ij}  + r_{ij}\\
+\beta_{0j}&= \gamma_{00} + \gamma_{01}(Intervention)_{j} + u_{0j}\\
+\beta_{1j}&= \gamma_{10} + \gamma_{11}(Intervention)_{j}\\
 \end{align*}
 
 It could be that the intervention is directly related to time so included a *average effect of time* through the main effect effect is just adding more parameters and is not informative.
@@ -204,10 +199,9 @@ phylum.fit5 <- glmm_microbiome(mydata=microbiome_data,model.number=5,
 Only the interaction term.
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Week)_{ij} + \beta_{2j}(Internvetion\times Week)_{ij}  + r_{ij}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Week)_{ij}+ r_{ij}\\
 \beta_{0j}&= \gamma_{00} + u_{0j}\\
-\beta_{1j}&= \gamma_{10}\\
-\beta_{2j}&= \gamma_{20}\\
+\beta_{1j}&= \gamma_{10} + \gamma_{11}(Intervention)_{j}\\
 \end{align*}
 
 
@@ -223,11 +217,10 @@ phylum.fit6 <- glmm_microbiome(mydata=microbiome_data,model.number=6,
 ### Covariate(s): Time and Gender
 
 \begin{align*}
-h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Internvetion)_{ij} + \beta_{2j}(Week)_{ij} + \beta_{3j}(Gender)_{ij} + r_{ij}\\
-\beta_{0j}&= \gamma_{00} + u_{0j}\\
+h\left(Y_{ij}\right)&=\beta_{0j} + \beta_{1j}(Week)_{ij}  + r_{ij}\\
+\beta_{0j}&= \gamma_{00} + \gamma_{01}(Intervention)_{j} + \gamma_{02}(Gender)_{j} + u_{0j}\\
 \beta_{1j}&= \gamma_{10}\\
 \beta_{2j}&= \gamma_{20}\\
-\beta_{3j}&= \gamma_{30}\\
 \end{align*}
 
 
